--- a/index.html
+++ b/index.html
@@ -3,6 +3,23 @@
 
 <head>
      <meta name="facebook-domain-verification" content="hf26ja6ugvnncne0ddmrq05wggzbkd" />
+	<!-- Facebook Pixel Code -->
+<script>
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+  n.queue=[];t=b.createElement(e);t.async=!0;
+  t.src=v;s=b.getElementsByTagName(e)[0];
+  s.parentNode.insertBefore(t,s)}(window, document,'script',
+  'https://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '435975494897583');
+  fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+  src="https://www.facebook.com/tr?id=435975494897583&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Facebook Pixel Code -->
     <meta charset="UTF-8">
     <title>BOUMEZOUI &#8211; إليك من الطبيعة!</title>
     <link rel="stylesheet" href="assets/style.css" data-minify="1" />
